Fix horizontal scroll bar.

--- a/media/main.css
+++ b/media/main.css
@@ -27,7 +27,6 @@ p {
 
 header {
   background: #ababab;
-  width: 100%;
   padding: 1em; }
   header h1 {
     color: #fff;
